# circuitfp

./: LICENSE  README.md  pyproject.toml
doc/: README.md
docs/: CHANGELOG.md  Overlap.md  PhaseBasis.md  PhaseOperators.md  README.md  conventions.md  development.md
examples/: BCS_overlap.ipynb  README.md  phase_basis_and_operators.ipynb
src/circuitfp/: __init__.py  operators.py  overlap.py  phase_basis.py
src/circuitfp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_operators.py  test_overlap.py  test_phase_basis.py
